[no-jira] Update localizable strings

--- a/bitrise-screenshot-automation/Localization/Base.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/Base.lproj/Localizable.strings
@@ -10,3 +10,18 @@
 /* No comment provided by engineer. */
 "Places near San Jose" = "Places near San Jose";
 
+/* No comment provided by engineer. */
+"Run sample with ${applicationName}" = "Run sample with ${applicationName}";
+
+/* No comment provided by engineer. */
+"Sample Shortcut" = "Sample Shortcut";
+
+/* No comment provided by engineer. */
+"Test completed successfully." = "Test completed successfully.";
+
+/* No comment provided by engineer. */
+"Test sample with ${applicationName}" = "Test sample with ${applicationName}";
+
+/* No comment provided by engineer. */
+"This is a Sample Shortcut." = "This is a Sample Shortcut.";
+
