added a test notification so we can see it in the notification center testing

--- a/bitrise-screenshot-automation/Localization/de.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/de.lproj/Localizable.strings
@@ -24,3 +24,9 @@
 
 /* No comment provided by engineer. */
 "This is a Sample Shortcut." = "Dies ist eine Beispielverknüpfung";
+
+/* No comment provided by engineer. */
+"Charging Notification" = "Ladebenachrichtigung";
+
+/* No comment provided by engineer. */
+"Your vehicle has finished charging" = "Ihr Fahrzeug ist fertig aufgeladen";
