--- a/bitrise-screenshot-automation/Localization/en.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/en.lproj/Localizable.strings
@@ -25,3 +25,9 @@
 /* No comment provided by engineer. */
 "This is a Sample Shortcut." = "This is a Sample Shortcut.";
 
+/* No comment provided by engineer. */
+"Charging Notification" = "Charging Notification";
+
+/* No comment provided by engineer. */
+"Your vehicle has finished charging" = "Your vehicle has finished charging";
+
