--- a/bitrise-screenshot-automation/Localization/ko.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/ko.lproj/Localizable.strings
@@ -24,3 +24,9 @@
 
 /* No comment provided by engineer. */
 "This is a Sample Shortcut." = "샘플 바로가기입니다.";
+
+/* No comment provided by engineer. */
+"Charging Notification" = "충전 알림";
+
+/* No comment provided by engineer. */
+"Your vehicle has finished charging" = "차량 충전이 완료되었습니다";
