Update localizable strings

--- a/bitrise-screenshot-automation/Localization/de.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/de.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "Edit configuration to explore a location." = "Bearbeiten Sie die Konfiguration, um einen Ort zu erkunden.";
 
 /* No comment provided by engineer. */
+"Find chargers near you" = "Finden Sie Ladegeräte in Ihrer Nähe";
+
+/* No comment provided by engineer. */
 "Explore your favorite cities." = "Entdecken Sie Ihre Lieblingsstädte.";
 
 /* No comment provided by engineer. */
