--- a/bitrise-screenshot-automation/Localization/Base.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/Base.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "Edit configuration to explore a location." = "Edit configuration to explore a location.";
 
 /* No comment provided by engineer. */
-"Explore your favorite cities." = "Explore your favorite cities.";
+"Find chargers near you" = "Find chargers near you";
 
 /* No comment provided by engineer. */
 "Nearby Chargers" = "Nearby Chargers";
