--- a/bitrise-screenshot-automation/Localization/ko.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/ko.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "Edit configuration to explore a location." = "위치를 탐색하려면 구성을 수정하세요.";
 
 /* No comment provided by engineer. */
+"Find chargers near you" = "가까운 충전기 찾기";
+
+/* No comment provided by engineer. */
 "Explore your favorite cities." = "좋아하는 도시를 탐험하세요.";
 
 /* No comment provided by engineer. */
