--- a/bitrise-screenshot-automation/Localization/en.lproj/Localizable.strings
+++ b/bitrise-screenshot-automation/Localization/en.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "Nearby Chargers" = "Nearby Chargers";
 
 /* No comment provided by engineer. */
+"Run sample with Chargy" = "Run sample with Chargy";
+
+/* No comment provided by engineer. */
 "Run sample with ${applicationName}" = "Run sample with ${applicationName}";
 
 /* No comment provided by engineer. */
